# kairo

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
docs/brainstorm/: 2026-06-18-kairo-concept.md
docs/design/: 1-kairo-mvp.md  13-source-class-corpus-stream.md  15-binary-ingest.md  24-corpus-dir-ingest.md  35-kairo-web-console.md  41-web-i18n.md  44-meeting-multiform-digest.md  6-benchmark-prep.md  60-ref-generate-prose.md  61-grok-provider.md  64-unified-source-ingest.md  67-dir-as-multiform-ref.md  69-web-glossary-ui.md  71-shared-glossary.md  73-ref-blocked-retry.md  75-unified-run-button.md  kairo-mvp.md
scripts/: serve
src/kairo/: __init__.py  __main__.py  backends.py  cli.py  corpus.py  engine.py  glossary.py  history.py  machine.py  models.py  provider.py  rules.py  workspace.py  (+1 more)
tests/: conftest.py  test_add.py  test_add_copy.py  test_agent_provider.py  test_cli.py  test_corpus.py  test_delete_reference.py  test_delete_workspace.py  test_engine.py  test_engine_pending.py  test_generate_prose.py  test_glossary.py  test_glossary_write.py  test_history.py  test_meeting_multiform_e2e.py  test_models_roles.py  test_nav_doc_active.py  test_provider.py  test_ref_retry.py  test_rules.py  test_rules_digest_attach.py  test_rules_digest_body.py  test_rules_multisource.py  test_shared_glossary.py  test_skill_kairo.py  test_source_layer_v2.py  test_stream_index.py  test_transform.py  test_unified_run.py  test_web_api.py  test_web_discovery.py  test_web_i18n.py  test_web_render.py  test_web_tasks.py  test_web_write.py  test_workspace.py  test_workspace_append.py
(+26 files in other folders)
